--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,4 @@ org.gradle.configureondemand=true
 android.enableBuildCache=true
 org.gradle.jvmargs=-Xmx5120m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:MaxPermSize=512m
 org.gradle.caching=true
+kotlin.incremental=true
